# proofmarket

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  Makefile  README.md  package.json
docs/: API-FEEDBACK.md  DEMO-SCRIPT.md  DEPLOY-LOG.md  DEPLOY.md  DESIGN-SPEC.md  FUTURE-DEVELOPMENT.md  IMPLEMENTATION-PLAN.md  JUDGE-CHECKLIST.md  SUBMISSION-CHECKLIST.md  TECH-ENDPOINTS.md  TECHNICAL-DOCUMENTATION.md  preflight-findings.md
docs/superpowers/plans/: 2026-07-06-mainnet-preview-devnet-markets.md  2026-07-07-proofmarket-ledger-reskin.md
golden/: PHASE0-FINDINGS.md  bundle.json  daily-root-account.json  epochday-findings.json  finality-findings.json  validate-stat-args.hex  validate-stat-args.json
idls/: txoracle.json
offchain/: .gitignore  package.json  tsconfig.json
offchain/cache/golden/: 18172280-1068-1.json
offchain/fixtures/: wc-fixtures.json  wc-fixtures.json.bad-1782861448830.json
offchain/scripts/: build-golden-cache.ts  replay-dryrun.ts  resolve-one-shot.ts
offchain/test/: access.test.ts  cache.test.ts  epochDay.test.ts  fixtures.test.ts  generate.test.ts  keys.test.ts  marketId.test.ts  network.test.ts  odds.test.ts  pda.test.ts  receipt.test.ts  resolve.unit.test.ts  resolveArgs.test.ts  resolveWindow.test.ts  scores.test.ts  smoke.test.ts  sse.test.ts  title.test.ts
programs/probe_validate/: Cargo.toml
programs/probe_validate/src/: idl_types.rs  lib.rs
programs/proofmarket/: Cargo.toml
programs/txoracle/: Cargo.toml
programs/txoracle/src/: lib.rs
scripts/: check-api-feedback.sh  check-demo-script.sh  check-deploy.ts  check-repo-hygiene.sh  check-tech-endpoints.sh  check-txline-network.ts  finish-seed.ts  golden-single-source.test.ts  judge-check.sh  land-validate-stat.ts  seed.ts
scripts/lib/: replay-run.ts
tests/: capture-resolved-market.ts  claim.ts  close_market.ts  create_market.ts  e2e-replay-receipt.ts  e2e-replay.ts  errors.ts  helpers.ts  proofmarket.ts  refund.ts  replay-run.unit.ts  resolve.ts  stake.ts
tests/fixtures/: resolved-market.json
web/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
web/src/app/: globals.css  (+4 more)
(+136 files in other folders)
