[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Override the SBF build toolchain to platform-tools v1.52 (rustc 1.89), the lowest
# release that supports edition2024 — required because anchor-lang 0.31.1 -> solana-program 2.x
# pulls blake3/zerocopy (edition2024). CLI 2.1.0's default v1.43 (rustc 1.79) cannot parse them.
# Default --arch stays SBPFv0, so the .so still deploys on Agave 2.1.0 + devnet.
# Evidence: scratchpad/edition2024-fix.md (cargo-build-sbf 2.1.0 source-verified).
[workspace.metadata.solana]
tools-version = "1.52"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
